[package]
name = "multiping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastping-rs = "0.2.4"
icmp = "0.3.0"
prettytable = "0.10.0"
regex = "1.10.3"
structopt = { version = "0.3.26", features = ["color"] }
tokio = { version = "1.36.0", features = ["full"] }
